# listen

./: package-lock.json
grok-solana-demo/: .env.example  Cargo.toml
grok-solana-demo/src/: main.rs
listen-interface/: package-lock.json
listen-interface/src/: config.ts  index.css  routeTree.gen.ts
listen-interface/src/components/: Layout.tsx  MarketData.css  MarketData.tsx  SimpleHeader.tsx  SolanaAgentConnector.tsx
listen-interface/src/components/examples/: ExampleCard.tsx  ExamplesPage.tsx
listen-interface/src/hooks/: useSolBalance.ts  useSolanaPortfolio.ts  useWaitForTransaction.ts
listen-interface/src/routes/: examples.tsx  market-data.tsx
listen-interface/src/services/: birdeyeService.ts
listen-kit/examples/: GROK_REASONING_GUIDE.md  SOLANA_INTERFACE_GUIDE.md  grok_example.rs  grok_reasoning_loop.rs  grok_solana_example.rs  grok_solana_reasoning.rs  package.json  server.js  solana_agent_with_interface.rs
listen-kit/src/: grok.rs  lib.rs
listen-kit/src/common/: grok.rs
listen-kit/src/reasoning_loop/: mod.rs
listen-legacy/: .env.full  extract_bs58.py  fund.json  package-lock.json
listen-legacy/src/: lib.rs
