[package]
name = "grok-solana-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
dotenv = "0.15.0"
solana-client = "1.16.25"
solana-sdk = "1.16.25"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.77"
bs58 = "0.4.0"
